fix: improves keyboard handling/spatial navigation (#687)
* fix: improves keyboard handling:

* properly hides off-screen var panel questions
* adds scrub bar to spatial nav
* prevents up/down scrolling window

* version updated

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -1232,6 +1232,7 @@ $start-button-size: 15vw;
   width: 80%;
 
   &.left {
+    display: none;
     margin-left: -100%;
     opacity: 0;
     pointer-events: none;
@@ -1239,6 +1240,7 @@ $start-button-size: 15vw;
   }
 
   &.right {
+    display: none;
     margin-left: 100%;
     opacity: 0;
     pointer-events: none;
